# security-manager

./: CMakeLists.txt
db/: CMakeLists.txt  security-manager-setup
policy/: CMakeLists.txt  security-manager-policy-reload.in
src/client/: client-common.cpp  client-security-manager.cpp
src/cmd/: CMakeLists.txt
src/common/: CMakeLists.txt  file-lock.cpp  service_impl.cpp  smack-labels.cpp  smack-rules.cpp
src/common/include/: file-lock.h  privilege_db.h  smack-rules.h
src/dpl/core/src/: assert.cpp  binary_queue.cpp
src/dpl/db/src/: sql_connection.cpp
src/server/: CMakeLists.txt
src/server/main/: socket-manager.cpp
src/server/main/include/: service-thread.h
systemd/: security-manager.service.in  security-manager.socket
